; ModuleID = '/home/carl/AnghaBench/nanomsg/src/core/extr_symbol.c_nn_symbol_info.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/core/extr_symbol.c_nn_symbol_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_symbol_properties = type { i32 }

@SYM_VALUE_NAMES_LEN = common dso_local global i32 0, align 4
@sym_value_names = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nn_symbol_info(i32 %0, %struct.nn_symbol_properties* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.nn_symbol_properties*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.nn_symbol_properties* %1, %struct.nn_symbol_properties** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %14, label %10

10:                                               ; preds = %3
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* @SYM_VALUE_NAMES_LEN, align 4
  %13 = icmp sge i32 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %10, %3
  store i32 0, i32* %4, align 4
  br label %28

15:                                               ; preds = %10
  %16 = load i32, i32* %7, align 4
  %17 = icmp sgt i32 %16, 4
  br i1 %17, label %18, label %19

18:                                               ; preds = %15
  store i32 4, i32* %7, align 4
  br label %19

19:                                               ; preds = %18, %15
  %20 = load %struct.nn_symbol_properties*, %struct.nn_symbol_properties** %6, align 8
  %21 = load i32*, i32** @sym_value_names, align 8
  %22 = load i32, i32* %5, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @memcpy(%struct.nn_symbol_properties* %20, i32* %24, i32 %25)
  %27 = load i32, i32* %7, align 4
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %19, %14
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @memcpy(%struct.nn_symbol_properties*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
